# packages/shared/openapi.json
@@ -2353,6 +2353,17 @@
             "minLength": 1,
             "title": "Name",
             "type": "string"
+          },
+          "template_id": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Template Id"
           }
         },
         "required": [
